# financial-table-extractor

./: .env.example  .gitignore  CLAUDE.md  alembic.ini  design.md  docker-compose.yml  main.py  pyproject.toml  requirement.md  table-schema.md
.trellis/: .template-hashes.json
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md  task-pipeline-contracts.md
.trellis/spec/frontend/: component-guidelines.md  directory-structure.md  hook-guidelines.md  index.md  quality-guidelines.md  state-management.md  type-safety.md
.trellis/tasks/03-23-brainstorm-continue-development/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/03-23-parser-service-dispatch-cleanup/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/workspace/codex-agent/: index.md  (+1 more)
alembic/: README  env.py
alembic/versions/: 20260323_0001_create_t_task.py  20260401_0002_add_extraction_tables.py  20260413_0003_add_document_toc_and_rule_vectors.py
tests/: conftest.py
tests/core_service/: test_artifact_loading.py  test_confidence_scorer.py  test_document_toc_builder.py  test_embedding_client.py  test_extraction_normalizer.py  test_extraction_repositories.py  test_extractor_worker.py  test_fast_track_extractor.py  test_llm_fallback_client.py  test_logical_table_builder.py  test_review_routes.py  test_review_service.py  test_snowflake.py  test_table_router.py  test_tasks_api.py
tests/parser_service/: test_mineru_artifact_normalizer.py  test_mineru_parser_engine.py  test_worker.py
(+76 files in other folders)
