[project]
name = "financial-table-extractor"
version = "0.1.0"
description = "Backend and tooling for financial report table extraction"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5,<2",
    "asyncpg>=0.30.0,<1",
    "fastapi>=0.116.1,<1",
    "minio>=7.2.18,<8",
    "pgvector>=0.3.6,<1",
    "pydantic-settings>=2.11.0,<3",
    "python-multipart>=0.0.20,<1",
    "redis>=6.4.0,<7",
    "sqlalchemy>=2.0.43,<3",
    "uvicorn>=0.35.0,<1",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0,<1",
    "httpx>=0.28.1,<1",
    "pytest>=8.4.2,<9",
    "pytest-asyncio>=1.2.0,<2",
    "ruff>=0.14.0,<1",
]

[project.scripts]
financial-table-extractor = "apps.core_service.app.main:main"
financial-table-parser = "apps.parser_service.app.main:main"
financial-table-extractor-worker = "apps.core_service.app.extractor_main:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
extend-exclude = [".agents", ".idea", ".trellis"]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["apps"]
